--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Begginer Js</title>
   </head>
   <body class="bg-gray-400 h-screen">
-    <h1 class="text-2xl text-red-800">Helow There </h1>
+   <main class="container mx-auto p-6 mt-40 max-w-[1200px] shadow-xl bg-slate-50 ">
+    <div class="Btn flex items-center justify-center gap-8">
+      <button class="p-4 bg-gray-800 rounded-md text-white md:text-xl" id="jsBtn">JS Projects</button>
+      <button class="p-4 bg-gray-800 rounded-md text-white md:text-xl" id="tailwindBtn">TailwindCss Projects</button>
+    </div>
+    <div class="mt-20 md:mt-10 text-center" id="jS">
+      <h1>JS Projects</h1>
+      <h1>JS Projects</h1>
+      <h1>JS Projects</h1>
+    </div>
+    <div class="hidden mt-20 md:mt-10 text-center" id="TailwinCss">
+      <h1>TailwinCss Projects</h1>
+      <h1>TailwinCss Projects</h1>
+      <h1>TailwinCss Projects</h1>
+    </div>
+   </main>
     <script type="module" src="/main.js"></script>
   </body> 
 </html>
