--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Begginer Js</title>
   </head>
   <body class="bg-gray-400 h-screen">
-   <main class="container mx-auto p-6 mt-40 max-w-[1200px] shadow-xl bg-slate-50 ">
+   <main class="container mx-auto p-6 mt-40 max-w-[1200px] shadow-xl bg-slate-50 rounded-md">
     <div class="Btn flex items-center justify-center gap-8">
       <button class="p-4 bg-gray-800 rounded-md text-white md:text-xl" id="jsBtn">JS Projects</button>
       <button class="p-4 bg-gray-800 rounded-md text-white md:text-xl" id="tailwindBtn">TailwindCss Projects</button>
